--- a/src/pages/community.module.css
+++ b/src/pages/community.module.css
@@ -83,6 +83,13 @@
   flex: 0 0 auto;
 }
 
+.channelIconSvg {
+  width: 18px;
+  height: 18px;
+  color: var(--ifm-color-emphasis-700);
+  flex: 0 0 auto;
+}
+
 .channelIcon[data-icon='github'] {
   -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 0 0 7.86 10.92c.58.1.8-.25.8-.57v-2.2c-3.2.7-3.87-1.36-3.87-1.36-.52-1.34-1.27-1.7-1.27-1.7-1.04-.72.08-.7.08-.7 1.16.08 1.77 1.2 1.77 1.2 1.01 1.76 2.66 1.25 3.3.95.1-.74.4-1.24.72-1.53-2.55-.3-5.24-1.27-5.24-5.66 0-1.25.45-2.28 1.18-3.08-.11-.3-.51-1.5.11-3.14 0 0 .97-.31 3.17 1.17a10.9 10.9 0 0 1 5.76 0c2.2-1.48 3.16-1.17 3.16-1.17.62 1.64.23 2.85.11 3.14.73.8 1.18 1.83 1.18 3.08 0 4.4-2.7 5.35-5.27 5.63.4.35.76 1.05.76 2.12v3.14c0 .31.21.67.81.56A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z'/%3E%3C/svg%3E") center / contain no-repeat;
   mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='black' d='M12 .5C5.65.5.5 5.65.5 12a11.5 11.5 0 0 0 7.86 10.92c.58.1.8-.25.8-.57v-2.2c-3.2.7-3.87-1.36-3.87-1.36-.52-1.34-1.27-1.7-1.27-1.7-1.04-.72.08-.7.08-.7 1.16.08 1.77 1.2 1.77 1.2 1.01 1.76 2.66 1.25 3.3.95.1-.74.4-1.24.72-1.53-2.55-.3-5.24-1.27-5.24-5.66 0-1.25.45-2.28 1.18-3.08-.11-.3-.51-1.5.11-3.14 0 0 .97-.31 3.17 1.17a10.9 10.9 0 0 1 5.76 0c2.2-1.48 3.16-1.17 3.16-1.17.62 1.64.23 2.85.11 3.14.73.8 1.18 1.83 1.18 3.08 0 4.4-2.7 5.35-5.27 5.63.4.35.76 1.05.76 2.12v3.14c0 .31.21.67.81.56A11.5 11.5 0 0 0 23.5 12C23.5 5.65 18.35.5 12 .5Z'/%3E%3C/svg%3E") center / contain no-repeat;
